--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,9 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  animation: App-logo-spin 0.8s linear;
+  animation-iteration-count: 5;
+  height: 200px;
 }
 
 .App-header {
@@ -18,7 +19,7 @@
   font-size: large;
 }
 
-/*@keyframes App-logo-spin {
+@keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
-}*/
+}
