--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,16 @@
   animation: App-logo-spin 0.8s linear;
   animation-iteration-count: 5;
   height: 200px;
+  float: left;
+  margin: 30px
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-color: #158;
+  height: 250px;
   padding: 20px;
   color: white;
+  position: relative;
 }
 
 .App-intro {
@@ -22,4 +25,11 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.Me-text {
+  margin: 50px;
+  text-align: left;
+  font-style: italic;
+  line-height: 30px;
 }
